[VADSH-128] Info panel scrollbar color fixed

--- a/src/main/webapp/src/component/css/InfoPanel.css
+++ b/src/main/webapp/src/component/css/InfoPanel.css
@@ -24,6 +24,7 @@
 
 .Info-panel-scroll::-webkit-scrollbar-thumb {
     border-radius: 10px;
+    background-color: transparent;
 }
 
 .Info-panel-scroll::-webkit-scrollbar-track {
